# Nex-Launcher

./: .gitignore  Basic.json  README.md  README_DEV.md  binding.gyp  convert_fonts.js  package-lock.json  package.json  strip_comments.js
.versions/.Release_Note/: Release_v1.0.0.md  Release_v1.1.0.md  Release_v1.2.0.md  Release_v1.3.0.md  Release_v1.4.0.md  Release_v1.5.0.md  Release_v1.6.0.md  Release_v1.6.1.md  Release_v1.6.2.md
.versions/Nex_v1.0.0/: Function.py  Installer.py  Search.py  language.py
.versions/Nex_v1.1.0/: Function.py  Installer.py  Search.py  Theme.py  language.py
.versions/Nex_v1.1.0/NEX/: Out-exe.nex
.versions/Nex_v1.2.0/: language.py  nex.py  style.py
.versions/Nex_v1.2.0/.setup/: push.txt
.versions/Nex_v1.2.0/Installer/: Installer_main.py  dialogs.py  tools.py
.versions/Nex_v1.3.0/: config.py  nex.py
.versions/Nex_v1.3.0/.setup/: build.bat
.versions/Nex_v1.3.0/Installer/: Installer_config.py  Installer_dialogs.py  Installer_main.py
.versions/Nex_v1.3.0/Uninstaller/: Uninstaller_config.py  Uninstaller_dialogs.py  Uninstaller_main.py  Uninstaller_tools.py
.versions/Nex_v1.4.0/: config.py  nex.py
.versions/Nex_v1.4.0/Installer/: Installer_config.py  Installer_dialogs.py  Installer_main.py  Installer_tools.py
.versions/Nex_v1.4.0/Uninstaller/: Uninstaller_config.py  Uninstaller_dialogs.py  Uninstaller_main.py  Uninstaller_tools.py
.versions/Nex_v1.5.0/: app_icon.rc
.versions/Nex_v1.5.0/src/: Cau_Hinh.cpp  Cau_Hinh.h  Chay_Nex.h  Gioi_Thieu.cpp  Gioi_Thieu.h  NexMessageBox.cpp  main.cpp
.versions/Nex_v1.6.0/src-tauri/: Cargo.toml
.versions/Nex_v1.6.0/src-tauri/capabilities/: default.json
.versions/Nex_v1.6.1/src-tauri/: Cargo.toml  tauri.conf.json
.versions/Nex_v1.6.2/src-tauri/: Cargo.toml  tauri.conf.json
Source/: CMakeLists.txt  resources.qrc
Source/src/: Cai_Dat_Chung.cpp  Cai_Dat_Chung.h  Chay_Nex.cpp  NexMessageBox.h
Source/src/Installer/: Cau_Hinh_Cai_Dat.cpp  Cong_Cu_Cai_Dat.cpp  Cong_Cu_Cai_Dat.h  Hop_Thoai_Cai_Dat.h  Tac_Vu_Cai_Dat.h  Trinh_Cai_Dat.cpp
Source/src/Uninstaller/: Cau_Hinh_Go_Cai_Dat.cpp  Cau_Hinh_Go_Cai_Dat.h  Cong_Cu_Go_Cai_Dat.cpp  Hop_Thoai_Go_Cai_Dat.h  Trinh_Go_Cai_Dat.cpp  Trinh_Go_Cai_Dat.h
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/core/: CauNoiTruoc.js  GiaoTiepIPC.rs  Logic.js  TienTrinhChinh.js  lib.rs
src/core/GiaoDien/: CuaSo.rs
src/core/HeThong/: DuLieu.rs  HeThong.rs  LayThongTin.rs
src/core/QuanLyApp/: TienIch.rs  TrinhCaiDat.rs  TrinhGoCaiDat.rs
src/core/cpp/: KhoiPhucDuLieu.cpp  KhoiPhucDuLieu.h  PhaHuyDuLieu.cpp  PhaHuyDuLieu.h  TienIch_Addon.cpp  TrinhCaiDat.cpp  TrinhCaiDat.h  TrinhGoCaiDat.cpp  TrinhGoCaiDat.h
src/ui/: CauNoiTauri.js  KhoiChay.js  TienTrinh.html  TienTrinh.js  index.html
src/ui/KieuDang/: CaiDat.css  GocThietKe.css  HieuUng.css  ThanhBen.css  ThanhPhan.css  ThanhTieuDe.css  (+2 more)
(+43 files in other folders)
