[package]
name = "nex-launcher"
version = "1.6.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "../src/core/lib.rs"

[[bin]]
name = "nex-launcher"
path = "../src/core/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon", "image-ico"] }
tauri-plugin-log = "2"
base64 = "0.22.1"
tauri-plugin-dialog = "2.7.1"
sysinfo = "0.36.1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3.30"
